fix(webapp): AdminSection / Users: Make Popovers on Safari not overflow
See #148

--- a/apps/webapp/src/app/(admin)/admin/_component/AdminPage.module.scss
+++ b/apps/webapp/src/app/(admin)/admin/_component/AdminPage.module.scss
@@ -80,7 +80,7 @@
   }
 
   .contentSection {
-    overflow: auto;
+    overflow: visible;
     padding-inline: var(--lotta-spacing);
     &:has(aside) {
       overflow: hidden;
